我只是測試用的

--- a/EventFunWeb/Views/Shared/_Layout.cshtml
+++ b/EventFunWeb/Views/Shared/_Layout.cshtml
@@ -308,7 +308,7 @@
                         <p class="mb-0 text-white">.......................</p>
                     </div>
                     <div class="col-lg-4">
-                        <p class="mb-0">
+                        <p class="mb-0">11111111
                             <a href="~/Login/Login"
                                class="btn btn-outline-white text-white btn-md px-5 font-weight-bold btn-md-block">註冊</a>
                         </p>
